# Blog

./: .dockerignore  Dockerfile  README.md  start.sh
app/: Cargo.toml  schema.graphql
app/src/: authorization.rs  index.rs  initial.rs  lib.rs  new_post.rs  post.rs  sign_in.rs  update_post.rs
app/src/components/: toolbar.rs
server/: Cargo.toml  sqlx-data.json
server/migrations/: 20210207103115_users.sql  20210207103126_user_sessions.sql  20210207104131_settings.sql  20210207111100_posts.sql
server/src/: index.html  main.rs
server/src/records/: authorities.rs  mod.rs  posts.rs  settings.rs
server/src/records/users/: mod.rs  password.rs  session.rs
server/src/schema/: authorization.rs  mod.rs  posts.rs  settings.rs
