[package]
name = "server"
version = "0.1.0"
authors = ["Axel Nilsson <axel@deploy.software>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
async-graphql = "2.5.1"
async-graphql-warp = "2.5.1"
