[package]
name = "server"
version = "0.1.0"
authors = ["Axel Nilsson <axel@deploy.software>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
async-graphql = "2.5.1"
async-graphql-warp = "2.5.1"
sqlx = { version = "0.5.1", features = ["postgres", "migrate", "offline", "chrono", "runtime-tokio-rustls"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.61"
serde_derive = "1.0.123"
serde = "1.0.123"
bcrypt = "0.9.0"
rand = "0.8.3"
regex = "1.4.3"